# MakeTemp

./: .gitignore  CMakeLists.txt  config.h  config.h.cmake  config.h.in  makeTemp.cpp  makeTemp.h  mktemp.cpp  program.cpp
scripts/: build.ps1  fix-nmake-compile-comands.ps1
tools/: build.ps1  build.py  build.sh
